added posts from the db to the guest and main user page

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3500
 PRIVATE_KEY = ^&*23g8ht4899&^@hg@%811g%fgh@^&hghfg81h&%81&h&h^
+DB_URL = postgres://ahmedreddit:reddit123@localhost:5432/reddit
