--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "proxy":"http://localhost:3500/",
   "scripts": {
     "start": "nodemon ./src/index.js"
   },
